# cpzutils

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
example/: example_uvicorn_log_override.py
example/fastapi-template/: app.py  main.py
src/cpzutils/spa_support/: __init__.py  service.py
src/cpzutils/uvicorn_log_override/: __init__.py  override_access_log.py
